# Self-Playing-AI

./: CMakeLists.txt  Makefile  README.md  build.sh  screen-capture.cpp  screencapture.cpp
